# EIV-Core

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  attest_live.py  eiv-optimize-notes.md  glm_sandbox.py  pyproject.toml  render.yaml
contracts/: DEPLOYMENTS.md  EIVValidationRegistry.sol  compile_standalone.js  deploy_registry.py
contracts/artifacts/: EIVValidationRegistry.json
dashboard/: index.html  index_zh.html
docs/: ARCHITECTURE.md  DEMO_DAY.md  DESIGN.md  EIV-DOCS.md  HANDOFF.md  POSITIONING.md  PROPOSAL.md  README.md  audit-2026-07-07.md  intent-spec-v1.schema.json
docs/demo-run/: README.md  act1_process_adjustment.jsonl  act2_resist_injection.jsonl  gate-live-demo.md  gen_gate_demo.py  green_compliant.jsonl  resist_injection.jsonl  walkthrough.en.srt  walkthrough.html  walkthrough.zh.srt
eiv/: __init__.py  agent_loop.py  api.py  attestation.py  chain_adapter.py  demo.py  eip712.py  eth.py  glm.py  intent_source.py  mcp_tool.py  predicates.py  reputation.py  schema.py  sdk.py  selftest.py  service.py  store.py
eiv/fixtures/: scenarios.json
eiv/fixtures/intents/: intent_clean.json  intent_grok.json  intent_grok_live.json
eiv/fixtures/traces/: tx_clean.json  tx_grok.json  tx_residual.json  tx_unauth.json
eiv/static/: index.html  index_zh.html
